[package]
name = "pqcrg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
clap = { version = "4.4.10", features = ["derive"] }
base64 = "0.21.7"
aes-gcm = "0.10.3"
rand = "0.8.5"
rsa = "0.9.6"

[dependencies.oqs]
version = "0.9.0"
default-features = false
features = ["sigs", "kems"]
